Updates enhance. Stubs Web Components.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@architect/functions": "^3.14.1",
-    "@architect/sandbox": "^3.7.2",
-    "@begin/data": "^2.0.1",
-    "enhance": "github:kristoferjoseph/enhance"
+    "@architect/sandbox": "^3.7.4",
+    "@begin/data": "^2.0.1"
   },
   "devDependencies": {
-    "@architect/architect": "^8.7.2"
+    "@architect/architect": "^8.7.2",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.2.2"
   }
 }
