--- a/src/http/get-login/package.json
+++ b/src/http/get-login/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@architect/functions": "^3.14.1",
-    "tiny-json-http": "^7.3.0"
+    "@begin/enhance": "^0.0.3",
+    "esm": "^3.2.25"
   }
 }
