--- a/src/http/get-todos/package.json
+++ b/src/http/get-todos/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "@architect/functions": "^3.14.1",
     "@begin/data": "^2.0.1",
-    "enhance": "github:kristoferjoseph/enhance"
+    "@begin/enhance": "^0.0.5"
   }
 }
