--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@architect/functions": "^3.14.1",
-    "@architect/sandbox": "^3.7.4",
+    "@architect/sandbox": "3.4",
     "@begin/data": "^2.0.1"
   },
   "devDependencies": {
