Refactors to auth middleware pattern.

--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@architect/eslint-config": "^2.0.0-RC.1",
-    "@architect/functions": "^3.14.1",
-    "@architect/sandbox": "3.4",
-    "@begin/data": "^2.0.1"
+    "@architect/sandbox": "^4.2.1"
   },
   "devDependencies": {
-    "@architect/architect": "^8.7.2",
-    "tap-spec": "^5.0.0",
+    "@architect/architect": "^9.1.0",
     "tape": "^5.2.2"
   }
 }
