--- a/src/http/get-auth/package.json
+++ b/src/http/get-auth/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "get-todos-000id",
+  "name": "get-auth",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +8,8 @@
   "keywords": [],
   "author": "kj <kj@begin.com>",
   "license": "Apache-2.0",
+  "description": "",
   "dependencies": {
-    "@architect/functions": "^4.0.0",
-    "@begin/data": "^3.0.3",
-    "@begin/enhance": "^1.0.0"
+    "@architect/functions": "^4.0.0"
   }
 }
