--- a/src/http/post-todos-000id/package.json
+++ b/src/http/post-todos-000id/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "post-todos-000id",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "kj <kj@begin.com>",
+  "license": "Apache-2.0",
   "dependencies": {
     "@architect/functions": "^4.0.0",
-    "@begin/data": "^2.0.1",
-    "xss": "^1.0.9"
+    "@begin/data": "^3.0.3",
+    "xss": "^1.0.10"
   }
 }
