--- a/src/http/get-login/package.json
+++ b/src/http/get-login/package.json
@@ -1,7 +1,16 @@
 {
+  "name": "get-login",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "kj <kj@begin.com>",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@architect/functions": "^3.14.1",
-    "@begin/enhance": "^0.0.9",
-    "esm": "^3.2.25"
+    "@architect/functions": "^4.0.0",
+    "@begin/enhance": "^1.0.0"
   }
 }
