--- a/src/http/post-todos-delete/package.json
+++ b/src/http/post-todos-delete/package.json
@@ -11,7 +11,6 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@architect/functions": "^4.0.0",
-    "@begin/data": "^3.0.3",
-    "@begin/enhance": "^1.0.0"
+    "@begin/data": "^3.0.3"
   }
 }
